# nai-tok

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  (+1 more)
nai-tokenizers/: Cargo.toml  build.rs
nai-tokenizers-extism/: Cargo.toml
nai-tokenizers-extism/src/: lib.rs
nai-tokenizers-web/: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  package.json
nai-tokenizers-web/.cargo/: config.toml
nai-tokenizers-web/src/: lib.rs
nai-tokenizers-web/www/: index.html  worker.js
nai-tokenizers/src/: lib.rs
nai-tokenizers/src/snapshots/: nai_tokenizers__glm45_template__tests__01_basic_with_gen_prompt.snap  nai_tokenizers__glm45_template__tests__04_multi_turn.snap  nai_tokenizers__glm45_template__tests__05_no_system_prompt.snap  nai_tokenizers__glm45_template__tests__08_multi_turn_reasoning.snap
nai-tokenizers/tests/: glm45_template_tests.rs  glm45_tokenizer_tests.rs
nai-tokenizers/tests/snapshots/: glm45_template_tests__glm45_template_tests__01_basic_with_gen_prompt.snap  glm45_template_tests__glm45_template_tests__02_thinking_enabled.snap  glm45_template_tests__glm45_template_tests__03_thinking_disabled.snap  glm45_template_tests__glm45_template_tests__04_multi_turn.snap  glm45_template_tests__glm45_template_tests__05_no_system_prompt.snap  glm45_template_tests__glm45_template_tests__06_reasoning_content_think_disabled.snap  glm45_template_tests__glm45_template_tests__07_reasoning_content_think_enabled.snap  glm45_template_tests__glm45_template_tests__08_multi_turn_reasoning.snap  glm45_template_tests__glm45_template_tests__09_chat_no_prefill.snap  glm45_template_tests__glm45_template_tests__10_chat_canonical_prefill.snap  glm45_template_tests__glm45_template_tests__11_chat_canonical_prefill_reasoning_enabled.snap  glm45_template_tests__glm45_template_tests__12_chat_partial_reasoning_prefill.snap  glm45_template_tests__glm45_template_tests__13_chat_full_reasoning_prefill.snap  glm45_template_tests__glm45_template_tests__14_chat_multi_turn_with_assistant_messages.snap  glm45_template_tests__glm45_template_tests__15_chat_multi_turn_with_reasoning.snap  glm45_template_tests__glm45_template_tests__16_chat_reasoning_disabled_with_reasoning_content.snap  glm45_template_tests__glm45_template_tests__17_chat_empty_system_message.snap  glm45_template_tests__glm45_template_tests__18_chat_complex_multi_turn.snap  nai_tokenizers__glm45_template__tests__02_thinking_enabled.snap  nai_tokenizers__glm45_template__tests__03_thinking_disabled.snap  nai_tokenizers__glm45_template__tests__06_reasoning_content_think_disabled.snap  (+1 more)
nai-tokenizers/utils/: generate_test_cases.py
(+8 files in other folders)
