[package]
name = "nai-tokenizers-web"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nai-tokenizers = { path = "../nai-tokenizers", default-features = false, features = ["glm45_tokenizer", "wasm"] }
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization
codegen-units = 1         # Better optimization
strip = true              # Strip symbols
panic = "abort"           # Smaller panic handler

[profile.release.package."*"]
opt-level = "z"           # Optimize dependencies for size too