[package]
name = "nai-tokenizers"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
lazy_static = "1.5.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokenizers = { version = "0.22.1", features = ["http"], optional = true }
tokenizers-wasm = { package = "tokenizers", version = "0.22.1", default-features = false, features = ["unstable_wasm"], optional = true }
brotli = "8.0"

[build-dependencies]
ureq = "2.10"
brotli = "8.0"

[features]
default = ["glm45", "native"]
glm45 = []
native = ["tokenizers"]
wasm = ["tokenizers-wasm"]
