[package]
name = "nai-tokenizers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
lazy_static = "1.5.0"
serde = "1.0.228"
serde_json = "1.0.145"
brotli = "8.0"

[dev-dependencies]
insta = "1.41"

[dependencies.tokenizers]
path = "/home/juan/Projects/tokenizers/tokenizers"
default-features = false
optional = true

[build-dependencies]
ureq = "2.10"
brotli = "8.0"

[features]
default = ["glm45_tokenizer", "glm45_template"]
glm45_tokenizer = []
glm45_template = []
native = ["tokenizers", "tokenizers/onig"]
wasm = ["tokenizers/unstable_wasm"]